fourth diagram tested

--- a/calculator.html
+++ b/calculator.html
@@ -1517,7 +1517,7 @@
         
         const inheritance_result_table = [];
 
-        third_diagram(table, inheritance_result_table);
+        fourth_diagram(table, inheritance_result_table);
         print(inheritance_result_table)
    </script>
 </body>
