--- a/calculator.html
+++ b/calculator.html
@@ -11,7 +11,7 @@
         function print(a) {
             console.log(a);
         }
-        print("hello")
+        print("hello again")
         // ================================================
         function my_find(table, relation) {
             return table.find(elm => elm.relation == relation);
@@ -744,7 +744,7 @@
                         relation : "mother",
                         share : 1/3,
                         reason : "fardan",
-                        mo3asib : true,
+                        mo3asib : false,
                         info : [
                             "If there is anything left of the estate, it will be returned to him according to his share"
                         ]
@@ -1517,7 +1517,7 @@
         
         const inheritance_result_table = [];
 
-        fifth_diagram(table, inheritance_result_table);
+        sixth_diagram(table, inheritance_result_table);
         print(inheritance_result_table)
    </script>
 </body>
